# native_camera

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: ci.yml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: native_camera.dart  native_camera_method_channel.dart  native_camera_platform_interface.dart
test/: native_camera_method_channel_test.dart  native_camera_test.dart
windows/: CMakeLists.txt  native_camera_plugin.cpp  native_camera_plugin.h  native_camera_plugin_c_api.cpp
windows/include/native_camera/: native_camera_plugin_c_api.h
windows/test/: native_camera_plugin_test.cpp
